[gd_scene load_steps=20 format=3 uid="uid://ct260y20rp2bc"]

[ext_resource type="PackedScene" uid="uid://clc5dre31iskm" path="res://addons/godot-xr-tools/xr/start_xr.tscn" id="1_o6xl0"]
[ext_resource type="Script" uid="uid://5cs8keq6v20v" path="res://scripts/main.gd" id="1_tipki"]
[ext_resource type="PackedScene" uid="uid://bglful1qdlmnm" path="res://scenes/player.tscn" id="2_tipki"]
[ext_resource type="PackedScene" uid="uid://dp3stq6rivyb8" path="res://prefabs/table_with_holes.tscn" id="3_85g3d"]
[ext_resource type="PackedScene" uid="uid://dxhu0jy1vod1f" path="res://prefabs/mole.tscn" id="4_choun"]
[ext_resource type="PackedScene" uid="uid://dm0pq5o4jqgt3" path="res://prefabs/pickable_hammer.tscn" id="5_ya4ey"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="6_eb6dy"]
[ext_resource type="PackedScene" uid="uid://283wje14lqgu" path="res://scenes/main_ui.tscn" id="7_trceg"]
[ext_resource type="Script" uid="uid://dejirq7knwown" path="res://scripts/gameplay/game_manager.gd" id="9_85g3d"]
[ext_resource type="Script" uid="uid://5ho5p5wg01y6" path="res://scripts/statistics_manager.gd" id="10_choun"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_h2yge"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_1bvp3"]
sky_material = SubResource("ProceduralSkyMaterial_h2yge")

[sub_resource type="Environment" id="Environment_lquwl"]
background_mode = 2
sky = SubResource("Sky_1bvp3")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_0xm2m"]
size = Vector3(10, 0.1, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_85g3d"]
albedo_color = Color(0.30692276, 0.30692267, 0.30692264, 1)
metallic = 0.3
roughness = 0.03

[sub_resource type="BoxMesh" id="BoxMesh_h2yge"]
material = SubResource("StandardMaterial3D_85g3d")
size = Vector3(10, 0.1, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_choun"]
size = Vector3(10, 1, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_ya4ey"]
size = Vector3(10, 1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_7mycd"]
size = Vector3(1.5, 1, 0.6)

[node name="Main" type="Node3D"]
script = ExtResource("1_tipki")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lquwl")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="StartXR" parent="." instance=ExtResource("1_o6xl0")]

[node name="XROrigin3D" parent="." instance=ExtResource("2_tipki")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8994911, 0)

[node name="FloorAndWalls" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)

[node name="FloorShape" type="CollisionShape3D" parent="FloorAndWalls"]
shape = SubResource("BoxShape3D_0xm2m")

[node name="FloorMesh" type="MeshInstance3D" parent="FloorAndWalls/FloorShape"]
mesh = SubResource("BoxMesh_h2yge")

[node name="WallShape1" type="CollisionShape3D" parent="FloorAndWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -5)
shape = SubResource("BoxShape3D_choun")

[node name="WallMesh1" type="MeshInstance3D" parent="FloorAndWalls/WallShape1"]
mesh = SubResource("BoxMesh_ya4ey")

[node name="WallShape2" type="CollisionShape3D" parent="FloorAndWalls"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 5, 0.5, 0)
shape = SubResource("BoxShape3D_choun")

[node name="WallMesh2" type="MeshInstance3D" parent="FloorAndWalls/WallShape2"]
mesh = SubResource("BoxMesh_ya4ey")

[node name="WallShape3" type="CollisionShape3D" parent="FloorAndWalls"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -5, 0.5, 0)
shape = SubResource("BoxShape3D_choun")

[node name="WallMesh3" type="MeshInstance3D" parent="FloorAndWalls/WallShape3"]
mesh = SubResource("BoxMesh_ya4ey")

[node name="WallShape4" type="CollisionShape3D" parent="FloorAndWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 5)
shape = SubResource("BoxShape3D_choun")

[node name="WallMesh4" type="MeshInstance3D" parent="FloorAndWalls/WallShape4"]
mesh = SubResource("BoxMesh_ya4ey")

[node name="Table" parent="." instance=ExtResource("3_85g3d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -1)

[node name="1" type="Marker3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0.32, 0.12)

[node name="2" type="Marker3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.45, 0.32, -0.12)

[node name="3" type="Marker3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.32, 0.12)

[node name="4" type="Marker3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, 0.32, -0.12)

[node name="5" type="Marker3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.32, 0.12)

[node name="6" type="Marker3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, 0.32, -0.12)

[node name="7" type="Marker3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.32, 0.12)

[node name="8" type="Marker3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.45, 0.32, -0.12)

[node name="9" type="Marker3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0.32, 0.12)

[node name="StaticBody3D" type="StaticBody3D" parent="Table"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/StaticBody3D"]
shape = SubResource("BoxShape3D_7mycd")

[node name="Mole" parent="." instance=ExtResource("4_choun")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
visible = false

[node name="PickableHammer1" parent="." instance=ExtResource("5_ya4ey")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.301, 1, -0.5)
gravity_scale = 0.0
lock_rotation = true
freeze = true
press_to_hold = true

[node name="PickableHammer2" parent="." instance=ExtResource("5_ya4ey")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.286, 1, -0.5)
gravity_scale = 0.0
lock_rotation = true
freeze = true
press_to_hold = true

[node name="MenuScreen" parent="." instance=ExtResource("6_eb6dy")]
transform = Transform3D(0.002, 0, 0, 0, 0.002, 0, 0, 0, 0.002, 0, 1.5960823, -1.6552995)
screen_size = Vector2(1000, 600)
scene = ExtResource("7_trceg")
viewport_size = Vector2(1000, 600)
input_gamepad = true
transparent = 0
scene_properties_keys = PackedStringArray("res://game_ui")

[node name="GameManager" type="Node3D" parent="." node_paths=PackedStringArray("holes")]
script = ExtResource("9_85g3d")
mole_scenes = Array[PackedScene]([ExtResource("4_choun")])
holes = [NodePath("../Table/1"), NodePath("../Table/2"), NodePath("../Table/3"), NodePath("../Table/4"), NodePath("../Table/5"), NodePath("../Table/6"), NodePath("../Table/7"), NodePath("../Table/8"), NodePath("../Table/9")]

[node name="RespawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0006032, 0)

[node name="StatisticsManager" type="Node3D" parent="."]
script = ExtResource("10_choun")
